# hal

./: CMakeLists.txt  README.md
include/: i2c_interface.hpp
include/hal/: factory.hpp  gpio_interface.hpp  hal.hpp  spi_interface.hpp
src/: ft4222_i2c.cpp  ft4222_spi.cpp
